--- a/templates/index.html
+++ b/templates/index.html
@@ -3,24 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <title>Hacker News Top Stories</title>
+    <link rel="icon" type="image/png" href="static/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="static/favicon.svg" />
+    <link rel="shortcut icon" href="static/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png" />
+    <link rel="manifest" href="static/site.webmanifest" />
     <style>
+        /* Hacker News Style CSS */
+
         body {
-            font-family: Arial, sans-serif;
-        }
-        .news-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .news-item {
-            margin-bottom: 15px;
-        }
-        .news-title {
-            font-size: 1.2em;
             margin: 0;
+            padding: 0;
+            font-family: Verdana, Geneva, sans-serif;
+            font-size: 10pt;
+            /*background-color: #f6f6ef; */
+            background-color: #fff0e0; 
         }
-        .news-details {
-            font-size: 0.9em;
-            color: #555;
+
+        /* New h1 styling */
+        h1 {
+            background-color: #ff6600;  /* Orange background */
+            color: #000000;             /* Black text */
+            padding: 4px 6px;
+            font-size: 14pt;
+            margin: 0;
+            font-weight: normal;
+        }
+
+        table {
+            width: 100%;
+            border-spacing: 0;
+            border-collapse: collapse;
+        }
+
+        .header {
+            background-color: #ff6600;
+            padding: 2px;
+        }
+
+        .header a {
+            color: #000000;
+            text-decoration: none;
+        }
+
+        .title {
+            font-size: 10pt;
+            font-weight: bold;
+        }
+
+        .subtext {
+            color: #828282;
+            font-size: 7pt;
+        }
+
+        .news-item {
+            padding: 5px 0;
+        }
+
+        .news-item a:visited {
+            color: #828282;
+        }
+
+        .rank {
+            color: #828282;
+            font-size: 10pt;
+            text-align: right;
+            vertical-align: top;
+            padding-right: 5px;
+        }
+
+        .score {
+            color: #828282;
+            font-size: 7pt;
+        }
+
+        .footer {
+            padding: 10px;
+            font-size: 8pt;
+            color: #828282;
+            text-align: center;
+        }
+
+        a {
+            color: #0000ff;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .pagination {
+            padding: 10px;
+            text-align: right;
+        }
+
+        .pagination a {
+            color: #828282;
+            font-size: 8pt;
         }
     </style>
 </head>
