Update page title in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hacker News Top Stories</title>
+    <title>Hacker News Local - Top Stories</title>
     <link rel="icon" type="image/png" href="static/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/svg+xml" href="static/favicon.svg" />
     <link rel="shortcut icon" href="static/favicon.ico" />
