--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hacker News Local - Top Stories</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport meta tag -->
     <link rel="icon" type="image/png" href="static/favicon-48x48.png" sizes="48x48" />
     <link rel="icon" type="image/svg+xml" href="static/favicon.svg" />
     <link rel="shortcut icon" href="static/favicon.ico" />
@@ -16,7 +17,6 @@
             padding: 0;
             font-family: Verdana, Geneva, sans-serif;
             font-size: 10pt;
-            /*background-color: #f6f6ef; */
             background-color: #fff0e0; 
         }
 
@@ -28,6 +28,15 @@
             font-size: 14pt;
             margin: 0;
             font-weight: normal;
+        }
+
+        /* Container styling */
+        .container {
+            max-width: 1200px;    /* Increased max-width for desktop */
+            margin: 0 auto;       /* Centers the container */
+            padding: 0 15px;      /* Adds padding on left and right */
+            width: 100%;          /* Ensures the container takes full available width */
+            box-sizing: border-box; /* Includes padding in the total width */
         }
 
         table {
@@ -62,6 +71,14 @@
 
         .news-item a:visited {
             color: #828282;
+        }
+
+        .news-title {
+            margin: 0;
+        }
+
+        .news-details {
+            margin: 0;
         }
 
         .rank {
@@ -102,25 +119,69 @@
             color: #828282;
             font-size: 8pt;
         }
+
+        /* Responsive adjustments */
+        @media screen and (max-width: 1200px) {
+            .container {
+                max-width: 100%;
+            }
+        }
+
+        @media screen and (max-width: 800px) {
+            .container {
+                padding: 0 15px;
+            }
+
+            h1 {
+                font-size: 14pt;
+                padding: 8px 6px;
+            }
+
+            .news-title {
+                font-size: 12pt;
+            }
+
+            .news-details {
+                font-size: 9pt;
+            }
+        }
+
+        @media screen and (max-width: 600px) {
+            .container {
+                padding: 0 10px;
+            }
+
+            h1 {
+                font-size: 12pt;
+            }
+
+            .news-title {
+                font-size: 10pt;
+            }
+
+            .news-details {
+                font-size: 8pt;
+            }
+        }
     </style>
 </head>
 <body>
-    <h1>Latest Hacker News Stories</h1>
-    <ul class="news-list">
-        {% for item in news_items %}
-        <li class="news-item">
-            <p class="news-title">
-                <strong>{{ loop.index }}.</strong>
-                <a href="{{ item['url'] }}" target="_blank">{{ item['title'] }}</a>
-            </p>
-            <p class="news-details">
-                Posted by  <a href="https://news.ycombinator.com/submitted?id={{ item['by'] }}" target="_blank">{{ item['by'] }}</a>| 
-
-                Story ID:  <a href="https://news.ycombinator.com/item?id={{ item['id'] }}" target="_blank">{{ item['id'] }}</a>
-                
-            </p>
-        </li>
-        {% endfor %}
-    </ul>
+    <div class="container">
+        <h1>Latest Hacker News Stories</h1>
+        <ul class="news-list">
+            {% for item in news_items %}
+            <li class="news-item">
+                <p class="news-title">
+                    <strong>{{ loop.index }}.</strong>
+                    <a href="{{ item['url'] }}" target="_blank">{{ item['title'] }}</a>
+                </p>
+                <p class="news-details">
+                    Posted by <a href="https://news.ycombinator.com/submitted?id={{ item['by'] }}" target="_blank">{{ item['by'] }}</a> |
+                    Story ID: <a href="https://news.ycombinator.com/item?id={{ item['id'] }}" target="_blank">{{ item['id'] }}</a>
+                </p>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
