--- a/templates/index.html
+++ b/templates/index.html
@@ -168,7 +168,7 @@
 <body>
     <div class="container">
         <h1>
-            <span style="float: left;">Latest Hacker News Stories</span>
+            <span style="float: left;"><a href="/">Latest Hacker News Stories</a></span>
             <span style="float: right;">
                 <form action="/search" method="get" style="display: inline;">
                     <input type="text" name="q" placeholder="Search" value="{{ request.args.get('q', '') }}">
@@ -185,7 +185,7 @@
                     <a href="{{ item['url'] }}" target="_blank">{{ item['title'] }}</a>
                 </p>
                 <p class="news-details">
-                    Posted by <a href="https://news.ycombinator.com/submitted?id={{ item['by'] }}" target="_blank">{{ item['by'] }}</a> |
+                   Score  {{ item['score'] }} | Posted by <a href="https://news.ycombinator.com/submitted?id={{ item['by'] }}" target="_blank">{{ item['by'] }}</a> |
                     Story ID: <a href="https://news.ycombinator.com/item?id={{ item['id'] }}" target="_blank">{{ item['id'] }}</a>
                 </p>
             </li>
