refactored pages with base template, minor changes to keep things consistent

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,196 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Hacker News Local - Top Stories</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport meta tag -->
-    <link rel="icon" type="image/png" href="static/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="static/favicon.svg" />
-    <link rel="shortcut icon" href="static/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png" />
-    <link rel="manifest" href="static/site.webmanifest" />
-    <style>
-        /* Hacker News Style CSS */
+{% extends "base.html" %}
 
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Verdana, Geneva, sans-serif;
-            font-size: 10pt;
-            background-color: #fff0e0; 
-        }
+{% block title %}Hacker News Local - Top Stories{% endblock %}
 
-        /* New h1 styling */
-        h1 {
-            background-color: #ff6600;  /* Orange background */
-            color: #000000;             /* Black text */
-            padding: 4px 6px;
-            font-size: 14pt;
-            margin: 0;
-            font-weight: normal;
-        }
-
-        /* Container styling */
-        .container {
-            max-width: 1200px;    /* Increased max-width for desktop */
-            margin: 0 auto;       /* Centers the container */
-            padding: 0 15px;      /* Adds padding on left and right */
-            width: 100%;          /* Ensures the container takes full available width */
-            box-sizing: border-box; /* Includes padding in the total width */
-        }
-
-        table {
-            width: 100%;
-            border-spacing: 0;
-            border-collapse: collapse;
-        }
-
-        .header {
-            background-color: #ff6600;
-            padding: 2px;
-        }
-
-        .header a {
-            color: #000000;
-            text-decoration: none;
-        }
-
-        .title {
-            font-size: 10pt;
-            font-weight: bold;
-        }
-
-        .subtext {
-            color: #828282;
-            font-size: 7pt;
-        }
-
-        .news-item {
-            padding: 5px 0;
-        }
-
-        .news-item a:visited {
-            color: #828282;
-        }
-
-        .news-title {
-            margin: 0;
-        }
-
-        .news-details {
-            margin: 0;
-        }
-
-        .rank {
-            color: #828282;
-            font-size: 10pt;
-            text-align: right;
-            vertical-align: top;
-            padding-right: 5px;
-        }
-
-        .score {
-            color: #828282;
-            font-size: 7pt;
-        }
-
-        .footer {
-            padding: 10px;
-            font-size: 8pt;
-            color: #828282;
-            text-align: center;
-        }
-
-        a {
-            color: #0000ff;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .pagination {
-            padding: 10px;
-            text-align: right;
-        }
-
-        .pagination a {
-            color: #828282;
-            font-size: 8pt;
-        }
-
-        /* Responsive adjustments */
-        @media screen and (max-width: 1200px) {
-            .container {
-                max-width: 100%;
-            }
-        }
-
-        @media screen and (max-width: 800px) {
-            .container {
-                padding: 0 15px;
-            }
-
-            h1 {
-                font-size: 14pt;
-                padding: 8px 6px;
-            }
-
-            .news-title {
-                font-size: 12pt;
-            }
-
-            .news-details {
-                font-size: 9pt;
-            }
-        }
-
-        @media screen and (max-width: 600px) {
-            .container {
-                padding: 0 10px;
-            }
-
-            h1 {
-                font-size: 12pt;
-            }
-
-            .news-title {
-                font-size: 10pt;
-            }
-
-            .news-details {
-                font-size: 8pt;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>
-            <span style="float: left;"><a href="/">Latest Hacker News Stories</a></span>
-            <span style="float: right;">
-                <form action="/search" method="get" style="display: inline;">
-                    <input type="text" name="q" placeholder="Search" value="{{ request.args.get('q', '') }}">
-                    <input type="submit" value="Search">
-                </form>
-            </span>
-            <div style="clear: both;"></div>
-        </h1>
-        <ul class="news-list">
-            {% for item in news_items %}
-            <li class="news-item">
-                <p class="news-title">
-                    <strong>{{ loop.index }}.</strong>
-                    <a href="{{ item['url'] }}" target="_blank">{{ item['title'] }}</a> | <a href="/show/{{ item['id'] }}" target="_blank">show</a>
-                </p>
-                <p class="news-details">
-                   Score  {{ item['score'] }} | Posted by <a href="https://news.ycombinator.com/submitted?id={{ item['by'] }}" target="_blank">{{ item['by'] }}</a> |
-                    Story ID: <a href="https://news.ycombinator.com/item?id={{ item['id'] }}" target="_blank">{{ item['id'] }}</a>
-                </p>
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-</body>
-</html>
+{% block content %}
+    <ul class="news-list">
+        {% for item in news_items %}
+        <li class="news-item">
+            <p class="news-title">
+                <strong>{{ loop.index }}.</strong>
+                <a href="{{ item['url'] }}" target="_blank">{{ item['title'] }}</a> | <a href="{{ url_for('show', id=item['id']) }}">show</a>
+            </p>
+            <p class="news-details">
+                Score {{ item['score'] }} | Posted by <a href="https://news.ycombinator.com/submitted?id={{ item['by'] }}" target="_blank">{{ item['by'] }}</a> |
+                Story ID: <a href="https://news.ycombinator.com/item?id={{ item['id'] }}" target="_blank">{{ item['id'] }}</a>
+            </p>
+        </li>
+        {% endfor %}
+    </ul>
+{% endblock %}
