--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Hacker News Local - Top Stories</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Added viewport meta tag -->
-    <link rel="icon" type="image/png" href="static/favicon-48x48.png" sizes="48x48" />
-    <link rel="icon" type="image/svg+xml" href="static/favicon.svg" />
+    <link rel="icon" type="image/png" href="/static/favicon-48x48.png" sizes="48x48" />
+    <link rel="icon" type="image/svg+xml" href="/static/favicon.svg" />
     <link rel="shortcut icon" href="static/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="static/apple-touch-icon.png" />
-    <link rel="manifest" href="static/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
+    <link rel="manifest" href="/static/site.webmanifest" />
     <style>
         /* Hacker News Style CSS */
 
